--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -339,9 +339,23 @@ body {
 
 @media (min-width: 1024px){ /* For larger screens like laptop */
     .header img {
-        max-height: 50px;
+        margin-left: 10px;
+        max-height: 60px;
     }
     .search-bar {
+        width: 350px;
+    }
+    .nav {
+        flex-direction: row;
+        gap: 200px; 
+        margin: 10px 0;
+    }
+    .nav a {
+        font-size: 35px;
+        margin: 0; 
+    }
+    
+    /*.search-bar {
         width: 30%;
         margin: 10px 0;
     }
@@ -354,7 +368,7 @@ body {
     }
     .search-bar input {
         width: 100%; 
-    }
+    }*/
     .content img {
         width: 100%;
     }
