--- a/assets/css/about-us-style.css
+++ b/assets/css/about-us-style.css
@@ -141,13 +141,14 @@ body {
 .banner-text-container h1 {
     font-size: 48px;
     margin-bottom: 10px;
+    padding: 0 20px 0 100px
 }
 
 .banner-text-container p {
-    font-size: 24px;
+    font-size: 25px;
     max-width: 600px;
+    padding: 0 20px 0 100px
 }
-
 
 .content {
     background-color: #f9f9f9;
@@ -169,7 +170,7 @@ body {
 
 .section p {
     color: white;
-    font-size: 18px;
+    font-size: 25px;
     max-width: 800px;
     margin: 0 auto 20px;
 }
@@ -189,7 +190,7 @@ body {
 .history h2 {
     color: white;
     font-size: 36px;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
 }
 
 .history p {
@@ -233,6 +234,7 @@ body {
     font-size: 25px;
     margin-bottom: 10px;
 }
+
 .footer {
     background-color: #fff;
     color: #D21885;
