--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -406,13 +406,14 @@ body {
 /* For iPad */
 @media (min-width: 768px) and (max-width: 1366px) {
     .header {
-        flex-direction: column;
         align-items: center;
-        padding: 10px;
+        padding: 0;
+        padding-bottom: 8px;
+        margin-left: 30px;
     }
     .header img {
         margin: 0;
-        max-height: 30px;
+        max-height: 40px;
     }
     .nav {
         flex-direction: row;
