--- a/assets/css/about-us-style.css
+++ b/assets/css/about-us-style.css
@@ -124,31 +124,40 @@ body {
 
 .banner-text-container {
     flex: 1;
-    padding-right: 20px; 
+    padding-right: 60px; 
+    padding-left: 40px; 
+    text-align: left;   
 }
 
 .banner-image-container {
-    flex: 3;
+    flex: 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center; 
 }
 
 .banner-image-container img {
-    width: 75%;
+    max-width: 80%; 
     height: auto;
     display: block;
-    margin: auto;
+    margin-left: auto; 
 }
 
 .banner-text-container h1 {
-    font-size: 48px;
+    font-size: 60px;
     margin-bottom: 10px;
-    padding: 0 20px 0 100px;
+    margin-left: 0; 
 }
 
 .banner-text-container p {
-    font-size: 25px;
-    max-width: 600px;
-    padding: 0 20px 0 100px;
+    font-size: 36px; 
+    max-width: 700px; 
+    margin-top: 0;
+    margin-bottom: 20px;
+    margin-left: 0; 
 }
+
+
 
 .nothing-content-section {
     background-color: #D21885;
