--- a/assets/css/products-page-styles.css
+++ b/assets/css/products-page-styles.css
@@ -418,14 +418,17 @@ body {
 /* For iPad */
 @media (min-width: 768px) and (max-width: 1366px) {
     .header {
+        flex-direction: column;
         align-items: center;
         padding: 0;
+        padding-top: 5px;;
+        margin-top: 15px;;
         padding-bottom: 8px;
         margin-left: 30px;
     }
     .header img {
         margin: 0;
-        max-height: 40px;
+        max-height: 50px;
     }
     .nav {
         flex-direction: row;
@@ -438,7 +441,7 @@ body {
         font-size: 25px; 
     }
     .search-bar {
-        width: 60%;
+        width: 80%;
         margin: 10px 0;
     }
     .golden-section {
